--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <img src="imagenes/fondo.png" alt="Fondo" class="z-n1 position-absolute animate__aimated animate__bounceIn">
-                <img src="imagenes/nombre.png" alt="Nombre"class="z-0 position-absolute animate__animated animate__fadeInDown">
-                <img src="imagenes/cargo.png" alt="Cargo" class="z-1 position-absolute">
-                <img src="imagenes/hoja.png" alt="Hoja" class="z-2 position-absolute animate__animated animate__jackInTheBox">
-                <img src="imagenes/pataUno.png" alt="Pata Uno" class="animate__animated animate__fadeInLeft z-3 position-absolute">
-                <img src="imagenes/pataDos.png" alt="Pata Dos" class="z-4 position-absolute animate__animated animate__fadeInRight">
-                <img src="imagenes/capibara.png" alt="Capibara" class="z-5 position-absolute animate__animated animate__flash">
-                <img src="imagenes/sonrojo.png" alt="Sonrojo" class="z-6 position-absolute animate__animated animate__rotateIn">
+                <img src="imagenes/fondo.png" alt="Fondo" class="z-n1 position-absolute  animate__delay-1s">
+                <img src="imagenes/nombre.png" alt="Nombre"class="z-0 position-absolute animate__animated animate__fadeInDown animate__delay-3s">
+                <img src="imagenes/cargo.png" alt="Cargo" class="z-1 position-absolute animate__animated animate__jackInTheBox animate__delay-3s">
+                <img src="imagenes/hoja.png" alt="Hoja" class="z-2 position-absolute animate__animated animate__jackInTheBox animate__delay-5s">
+                <img src="imagenes/pataUno.png" alt="Pata Uno" class="animate__animated animate__fadeInLeft z-3 position-absolute animate__delay-2s">
+                <img src="imagenes/pataDos.png" alt="Pata Dos" class="z-4 position-absolute animate__animated animate__fadeInRight animate__delay-2s">
+                <img src="imagenes/capibara.png" alt="Capibara" class="z-5 position-absolute animate__animated animate__flash animate__delay-2s">
+                <img src="imagenes/sonrojo.png" alt="Sonrojo" class="z-6 position-absolute animate__animated animate__rotateIn animate__delay-3s">
             </div>
         </div>
     </div>
